<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adb_install_cdu">正在ADB升级大屏</string>
    <string name="adb_install_cdu_final">正在ADB升级大屏，在进行最后处理</string>
    <string name="adb_install_cdu_success">ADB升级大屏成功，准备重启</string>
    <string name="adb_install_file_not_exist">文件%s不存在</string>
    <string name="adb_install_tip">为了确保安全，升级过程中请不要使用车辆</string>
    <string name="ai_ota_sensing_type">系统感知</string>
    <string name="app_name">OTA</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_all_right">好的</string>
    <string name="button_call_cs">联系客服</string>
    <string name="button_cancel">取消</string>
    <string name="button_close">知道了</string>
    <string name="button_confirm">确认</string>
    <string name="button_confirm_close">确认关闭</string>
    <string name="button_confirm_open">确认开启</string>
    <string name="button_detail">详情</string>
    <string name="button_local">本地升级</string>
    <string name="button_modify_time">修改时间</string>
    <string name="button_ok">确认</string>
    <string name="button_retry">重试</string>
    <string name="button_schedule">预约升级</string>
    <string name="button_skip">跳过</string>
    <string name="button_udisk">U盘升级</string>
    <string name="button_upgrade_now">现在升级</string>
    <string name="button_usb_update">一键升级</string>
    <string name="change_dialog_noon_reminder_default">预约时间</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_cancel_desc">正在尝试取消…</string>
    <string name="check_desc">检查升级条件中…</string>
    <string name="check_title">新版本升级</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="countdown_format">(%ss)</string>
    <string name="default_schedule_time">3:00</string>
    <string name="default_service_phone">400-867-3388</string>
    <string name="desc_auto_upgrade_content">系统或应用有新版本时无需预约，系统将在夜间自动完成升级</string>
    <string name="desc_auto_upgrade_title">夜间自动升级</string>
    <string name="dialog_auto_upgrade_content">开启夜间自动升级后，有新版本升级时车辆将在# # 自动开始更新，升级前你将会在小鹏汽车 APP 收到通知</string>
    <string name="dialog_auto_upgrade_note">注：个别版本可能不支持自动升级</string>
    <string name="dialog_auto_upgrade_title">开启自动升级</string>
    <string name="dialog_cancel_upgrade_confirm_content">确认后将尝试取消本次升级</string>
    <string name="dialog_cancel_upgrade_confirm_title">确认取消升级</string>
    <string name="dialog_close_auto_content">取消夜间自动升级后，有新版本升级时车辆将不会在# # 自动开始更新</string>
    <string name="dialog_close_auto_title">关闭自动升级</string>
    <string name="dialog_condition_title">升级条件不满足</string>
    <string name="dialog_content_cond_charge_state">${CONDITION}，请结束充电后重试</string>
    <string name="dialog_content_cond_charging">${CONDITION}，请拔出充电枪后重试</string>
    <string name="dialog_content_cond_default">${CONDITION}，请稍后重试</string>
    <string name="dialog_content_cond_electric_percent">${CONDITION}，请充电后重试</string>
    <string name="dialog_content_ecu_not_ready">检查到${ECU_NAME}状态异常不满足升级条件，请联系客服处理</string>
    <string name="dialog_content_ecu_overheat">检查到${ECU_NAME}处于过温保护中，建议夜间升级</string>
    <string name="dialog_content_schedule_today">升级将在今天 hh:mm 开始</string>
    <string name="dialog_content_schedule_tomorrow">升级将在明天 hh:mm 开始</string>
    <string name="dialog_content_upgrade_cgw_failed">车况不满足升级条件，请锁车约15分钟后再解锁上电重试</string>
    <string name="dialog_content_vehicle_ev_ready">车况不满足升级条件，请重试</string>
    <string name="dialog_content_vehicle_gear_p">${CONDITION}，请挂P挡后重试</string>
    <string name="dialog_expired_title">升级包已过期</string>
    <string name="dialog_sota_detail">本次共升级 # 个应用，正在安装第 # 个应用</string>
    <string name="dialog_sota_title">应用升级中</string>
    <string name="dialog_sota_wait_tips">正在安装中，请稍等...</string>
    <string name="emphasize_format">#%s#</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expired_content">该升级包已过期，请稍后重试</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fonts_xpeng_bold">xpeng-fonts-bold</string>
    <string name="fonts_xpeng_medium">xpeng-fonts-medium</string>
    <string name="fonts_xpeng_number">xpeng-fonts-number</string>
    <string name="fonts_xpeng_number_bold">xpeng-fonts-number-bold</string>
    <string name="fonts_xpeng_number_regular">xpeng-fonts-number-regular</string>
    <string name="fonts_xpeng_regular">xpeng-fonts-regular</string>
    <string name="help_miss_conditions">当前车况不满足升级条件，无法继续升级。请您按提示的内容调整对应的车况条件后，重新进行升级</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history_title">查看历史版本</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="info_cdu_desc">大屏系统</string>
    <string name="info_ecu_summary_format">#（#）</string>
    <string name="info_fingerprint_version">固件版本号</string>
    <string name="info_hw_version">硬件版本号</string>
    <string name="info_mcu_version">MCU版本号</string>
    <string name="info_system_version">CDU</string>
    <string name="info_title">更多信息</string>
    <string name="info_title_apps">系统应用</string>
    <string name="info_title_ecus">硬件系统</string>
    <string name="install_app_title_format">正在安装大屏应用 （%d/%d）</string>
    <string name="install_cfg_title_format">正在配置：%s （%d/%d）</string>
    <string name="install_disable_speech_info">正在进行OTA升级，暂不支持语音对话</string>
    <string name="install_fail">升级失败</string>
    <string name="install_finalizing_title_format">正在进行最后配置：%s （%d/%d）</string>
    <string name="install_fmw_title_format">正在安装：%s （%d/%d）</string>
    <string name="install_init">升级准备中...</string>
    <string name="install_prepare_title_format">准备安装：%s （%d/%d）</string>
    <string name="install_success">升级成功</string>
    <string name="install_time_remainder_format">预计剩余 %d 分钟</string>
    <string name="install_time_total_default">预计总共需要 %d 分钟</string>
    <string name="item_view_role_description">Tab</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="main_btn_has_schedule_with_time">已预约%s升级</string>
    <string name="main_btn_upgrade_auto">将在今晚自动升级</string>
    <string name="main_btn_upgrade_to_new_version">升级为新版本</string>
    <string name="main_cancel_schedule">取消</string>
    <string name="main_cdu_full_version_prefix">固件版本：</string>
    <string name="main_check_os_version">检查更新</string>
    <string name="main_check_os_version_fail">未检查到版本，请稍后再试</string>
    <string name="main_find_new_version">发现新版本</string>
    <string name="main_history_version">历史版本</string>
    <string name="main_latest_version_tips">当前已是最新版本</string>
    <string name="main_modify_time">修改</string>
    <string name="main_more_info">更多信息</string>
    <string name="main_new_version">有新版本可升级</string>
    <string name="main_new_version_prefix">查看新版本</string>
    <string name="main_new_version_tips">有新版本可升级</string>
    <string name="main_no_new">已是最新版本</string>
    <string name="main_schedule_cancel_tip">预约升级已取消</string>
    <string name="main_schedule_time">已预约在%s进行系统升级</string>
    <string name="main_title">系统信息</string>
    <string name="main_unknown">未知</string>
    <string name="main_version_detail">新版本介绍</string>
    <string name="main_view_version_detail">查看版本说明</string>
    <string name="main_vin_prefix">VIN</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="new_schedule_time">已预约时间：%s</string>
    <string name="new_schedule_upgrade">预约 %s 升级</string>
    <string name="new_upgrade_now">现在升级</string>
    <string name="schedule_btn_cancel">取消预约</string>
    <string name="schedule_btn_confirm">确认预约该时间升级</string>
    <string name="schedule_btn_modify">更改升级时间</string>
    <string name="schedule_btn_upgrade">现在升级</string>
    <string name="schedule_cancel">取消预约</string>
    <string name="schedule_desc">升级过程中车辆将不能行驶</string>
    <string name="schedule_info">到达预约时间后，会在安全环境下进行自动升级</string>
    <string name="schedule_select_time">选择升级时间</string>
    <string name="schedule_sub_tips_1">升级过程中车辆无法使用及充电，请选择合适时间进行升级</string>
    <string name="schedule_sub_tips_2">到达预约时间，车辆未锁或车窗未关，则取消本次预约升级</string>
    <string name="schedule_sub_tips_3">请尽量避免在充电时进行升级</string>
    <string name="schedule_subtitle">请设置无须用车时间</string>
    <string name="schedule_time_predict">预计升级时间：%s</string>
    <string name="schedule_tips">注意事项：</string>
    <string name="upgrade_main_tip">升级过程中车辆将不能行驶</string>
    <string name="upgrade_now">立即升级</string>
    <string name="upgrade_schedule">预约升级</string>
    <string name="upgrade_sub_tip">请确认升级期间无需用车且车辆已停放在安全区域</string>
    <string name="upgrade_time_default">预计用时：30 分钟</string>
    <string name="upgrade_warn">安全提醒</string>
    <string name="version_prefix">Xmart OS</string>
</resources>