<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_vehicle_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="216dp" android:src="@mipmap/vehicle_background" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_vehicle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="216dp" android:src="@mipmap/vehicle_silvery" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="90sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_version_prefix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="305dp" android:text="@string/version_prefix" android:fontFamily="@string/fonts_xpeng_number_bold" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_vehicle"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="30sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_simple_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@string/fonts_xpeng_regular" android:layout_marginStart="10dp" app:layout_constraintStart_toEndOf="@+id/tv_version_prefix" app:layout_constraintTop_toTopOf="@+id/tv_version_prefix"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_main_info_container" android:background="@drawable/x_list_item_selector" android:paddingTop="32dp" android:paddingBottom="32dp" android:layout_width="572dp" android:layout_height="140dp" android:layout_marginLeft="222dp" android:layout_marginTop="16dp" android:paddingStart="40dp" android:paddingEnd="40dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_version_prefix">
        <com.xiaopeng.ota.view.AppGridView android:id="@+id/gv_main_info" android:layout_width="match_parent" android:layout_height="match_parent" android:horizontalSpacing="100dp" android:verticalSpacing="16dp" android:numColumns="1"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XButton android:textSize="26sp" android:textColor="@color/x_theme_text_01" android:id="@+id/btn_history_version" android:layout_width="188dp" android:layout_height="66dp" android:layout_marginTop="20dp" android:text="@string/main_history_version" android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="@+id/iv_vehicle" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Ghost.Large.Positive"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="@color/x_theme_text_03" android:id="@+id/tv_schedule_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="73dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/ll_main_info_container"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="26sp" android:id="@+id/btn_new_version" android:layout_width="344dp" android:layout_height="66dp" android:layout_marginTop="137dp" android:text="@string/main_no_new" android:layout_marginStart="318dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/ll_main_info_container" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XSwitch android:textSize="@dimen/x_font_body_03_size" android:textColor="@color/x_theme_text_03" android:gravity="center_vertical" android:id="@+id/s_auto_upgrade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="97dp" android:checked="false" android:paddingStart="@dimen/main_switch_padding" android:layout_marginEnd="73dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintRight_toRightOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_auto_upgrade_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="127dp" android:text="@string/desc_auto_upgrade_title" android:layout_marginStart="64dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textStyle="normal" android:textColor="@color/x_theme_text_04" android:id="@+id/tv_auto_upgrade_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/desc_auto_upgrade_content" android:layout_marginStart="64dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_auto_upgrade_title"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/group_schedule_supported" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="s_auto_upgrade, tv_auto_upgrade_title, tv_auto_upgrade_content"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_modify_time" android:layout_width="@dimen/main_ghost_button_width_schedule" android:layout_height="@dimen/main_ghost_button_height" android:text="@string/main_modify_time" android:layout_marginStart="20dp" app:layout_constraintBaseline_toBaselineOf="@+id/tv_schedule_info" app:layout_constraintStart_toEndOf="@+id/tv_schedule_info" style="@style/XButton.Ghost.Small.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_cancel_schedule" android:layout_width="@dimen/main_ghost_button_width_schedule" android:layout_height="@dimen/main_ghost_button_height" android:text="@string/main_cancel_schedule" android:layout_marginStart="15dp" app:layout_constraintBaseline_toBaselineOf="@+id/btn_modify_time" app:layout_constraintStart_toEndOf="@+id/btn_modify_time" style="@style/XButton.Ghost.Small.Positive"/>
    <androidx.constraintlayout.widget.Group android:id="@+id/group_modify_scheduled" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="btn_modify_time, btn_cancel_schedule"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="20sp" android:textColor="@color/x_theme_text_05" android:id="@+id/tv_cdu_full_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:fontFamily="@string/fonts_xpeng_bold" android:layout_marginStart="68dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
