<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/x_bg_app" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="40sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_select_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="95dp" android:text="@string/schedule_select_time" android:lineSpacingMultiplier="1.04" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_time_consume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_select_time"/>
    <com.xiaopeng.xui.widget.timepicker.XTimePicker android:id="@+id/tp_schedule_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="124dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_time_consume"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_schedule_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:maxWidth="880dp" android:text="@string/schedule_info" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_select_time"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_schedule_upgrade" android:visibility="gone" android:layout_width="542dp" android:layout_height="542dp" android:layout_marginTop="240dp" android:src="@mipmap/icon_schedule_upgrade" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_03" android:id="@+id/tv_upgrade_time_predict" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="38dp" android:layout_marginBottom="388dp" android:text="@string/schedule_time_predict" android:lineSpacingMultiplier="1.04" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="835dp" android:text="@string/schedule_tips" android:lineSpacingMultiplier="1.04" android:layout_marginStart="114dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_sub_tips_1" android:layout_width="717dp" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/schedule_sub_tips_1" android:lineSpacingMultiplier="1.04" android:layout_marginStart="149dp" android:layout_marginEnd="114dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_tips"/>
    <com.xiaopeng.xui.widget.XImageView android:layout_width="8dp" android:layout_height="8dp" android:layout_marginTop="12dp" android:src="@drawable/bg_main_dot" android:layout_marginEnd="27dp" app:layout_constraintEnd_toStartOf="@+id/tv_sub_tips_1" app:layout_constraintTop_toTopOf="@+id/tv_sub_tips_1"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_sub_tips_2" android:layout_width="717dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/schedule_sub_tips_2" android:lineSpacingMultiplier="1.04" android:layout_marginStart="149dp" android:layout_marginEnd="114dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_sub_tips_1"/>
    <com.xiaopeng.xui.widget.XImageView android:layout_width="8dp" android:layout_height="8dp" android:layout_marginTop="12dp" android:src="@drawable/bg_main_dot" android:layout_marginEnd="27dp" app:layout_constraintEnd_toStartOf="@+id/tv_sub_tips_2" app:layout_constraintTop_toTopOf="@+id/tv_sub_tips_2"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_body_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_sub_tips_3" android:layout_width="717dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/schedule_sub_tips_3" android:lineSpacingMultiplier="1.04" android:layout_marginStart="149dp" android:layout_marginEnd="114dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_sub_tips_2"/>
    <com.xiaopeng.xui.widget.XImageView android:layout_width="8dp" android:layout_height="8dp" android:layout_marginTop="12dp" android:src="@drawable/bg_main_dot" android:layout_marginEnd="27dp" app:layout_constraintEnd_toStartOf="@+id/tv_sub_tips_3" app:layout_constraintTop_toTopOf="@+id/tv_sub_tips_3"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="30sp" android:id="@+id/btn_schedule_confirm" android:layout_width="444dp" android:layout_height="66dp" android:layout_marginBottom="298dp" android:text="@string/schedule_btn_confirm" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_theme_primary_normal" android:id="@+id/btn_upgrade" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="218dp" android:text="@string/schedule_btn_upgrade" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/XButton.Flat.Small.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="30sp" android:id="@+id/btn_schedule_modify" android:layout_width="444dp" android:layout_height="66dp" android:layout_marginBottom="298dp" android:text="@string/schedule_btn_modify" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_theme_primary_normal" android:id="@+id/btn_cancel_schedule" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="218dp" android:text="@string/schedule_btn_cancel" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/XButton.Flat.Small.Positive"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_desc" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
