<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/cl_upgrade_container" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_background" android:layout_width="match_parent" android:layout_height="660dp" android:layout_marginTop="143dp" android:src="@mipmap/bg_upgrade_warn" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_01" android:gravity="center_vertical" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="130dp" android:layout_marginTop="50dp" android:text="@string/upgrade_warn" android:drawablePadding="20dp" android:drawableStart="@mipmap/icon_warn" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_background"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:gravity="start" android:orientation="vertical" android:id="@+id/ll_tips_container" android:background="@drawable/x_list_item_selector" android:layout_width="720dp" android:layout_height="176dp" android:layout_marginTop="18dp" android:layout_marginStart="130dp" android:layout_marginEnd="130dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/text_upgrade_main_tip" android:id="@+id/tv_main_tip" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="40dp" android:text="@string/upgrade_main_tip" app:layout_constraintStart_toStartOf="@+id/ll_tips_container" app:layout_constraintTop_toTopOf="@+id/ll_tips_container"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_03_size" android:textColor="@color/x_theme_text_03" android:id="@+id/tv_sub_tip" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="16dp" android:text="@string/upgrade_sub_tip" app:layout_constraintStart_toStartOf="@+id/ll_tips_container" app:layout_constraintTop_toBottomOf="@+id/tv_main_tip"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_theme_text_02" android:gravity="start|center_vertical" android:id="@+id/tv_upgrade_time" android:background="@drawable/x_list_item_selector" android:paddingLeft="30dp" android:paddingTop="20dp" android:paddingRight="30dp" android:paddingBottom="20dp" android:layout_width="720dp" android:layout_height="117dp" android:layout_marginTop="16dp" android:text="@string/upgrade_time_default" android:layout_marginStart="130dp" android:layout_marginEnd="130dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/ll_tips_container"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_function1" android:layout_width="314dp" android:layout_height="66dp" android:layout_marginTop="94dp" android:text="@string/upgrade_now" android:layout_marginStart="130dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_upgrade_time" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_function2" android:layout_width="314dp" android:layout_height="66dp" android:text="@string/upgrade_schedule" android:layout_marginStart="92dp" app:layout_constraintBottom_toBottomOf="@+id/btn_function1" app:layout_constraintStart_toEndOf="@+id/btn_function1" style="@style/XButton.Ghost.Large.Positive"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
